--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ MakerspaceVRGol/Assets/XR/Settings/Oculus Settings.asset
 MakerspaceVRGol/Assets/XR/Settings/Oculus Settings.asset
 MakerspaceVRGol/Packages/packages-lock.json
 MakerspaceVRGol/Assets/XR/Settings/Oculus Settings.asset
+MakerspaceVRGol/Assets/XR/Settings/Oculus Settings.asset
